--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native-stack": "^7.11.0",
     "expo": "~54.0.32",
     "expo-av": "~16.0.8",
+    "expo-blur": "^15.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~13.0.4",
     "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
     "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
